--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navigation">
     <ul class="navigation__ul">
       <li class="navigation__list"><a href="#" class="navigation__link"> About project</a></li>
-      <li class="navigation__list"> <a href="#" class="navigation__link">What is Yoruba?</a></li>
+      <li class="navigation__list"> <a href="#" class="navigation__link" id="modalBtn">What is Yoruba?</a></li>
     </ul>
   </nav>
   <header class="heading">
@@ -49,7 +49,7 @@
           <input type="type" name="search" class="content__form__input" id="input-box" aria-labelledby="Enter name" autocomplete="off" list="datalist__auto" required>
         </label>
         <datalist class="datalist__autocomplete" id="datalist__auto">
-            
+
         </datalist>
         <button type="submit" name="button" class="content__form__button"> Search </button>
       </form>
@@ -61,6 +61,15 @@
       </div>
       <div class="wrong__outcome">
         <p> The name you are searching for is not in the database. Please make sure your spellings are correct. If you would like to add the name, please <a class="wrong__outcome-email" href="mailto:gbajaf@yahoo.co.uk"> email </a> me.</p>
+      </div>
+    </section>
+    <section id="whatIsYorubaModal" class="yoruba__modal">
+      <div class="yoruba__modal-content">
+        <span class="yoruba__modal-close">&times;</span>
+        <h2>Yorùbá </h2>
+        <p class="yoruba__modal-info"> Yoruba is one of the three main ethnic groups in Nigeria. Yoruba states are located in southwestern Nigeria. Yoruba people are native speakers of the Yoruba language.  </p>
+        <p class="yoruba__modal-info">Names are important to Yoruba people, and it is generally believed that people live their life out based on their name. As a result, Yoruba put lots of thought into coming up with a name, including having naming ceremonies 7 days after the birth of a child. </p>
+        <p class="yoruba__modal-info"> To find out more, visit the wikipedia <a href="https://en.wikipedia.org/wiki/Yoruba_people"> page</a> </p>
       </div>
     </section>
   </main>
