Added more names and added github link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navigation">
     <ul class="navigation__ul">
-      <li class="navigation__list"><a href="#" class="navigation__link"> All names </a></li>
+      <li class="navigation__list"><a href="https://github.com/Gbaja" target="_blank" class="navigation__link"> FG </a></li>
       <li class="navigation__list"> <a href="#" class="navigation__link" id="modalBtn">What is Yoruba?</a></li>
     </ul>
   </nav>
